--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Psidon/lib/spdlog"]
-	path = Psidon/lib/spdlog
-	url = https://github.com/gabime/spdlog.git
+[submodule "Psidon/lib/glfw"]
+	path = Psidon/lib/glfw
+	url = https://github.com/glfw/glfw
