Started on renderer

--- a/Psidon/CMakeLists.txt
+++ b/Psidon/CMakeLists.txt
@@ -16,5 +16,7 @@ add_library(Psidon SHARED
 
 target_include_directories(Psidon PRIVATE src)
 target_include_directories(Psidon PRIVATE lib/glfw/include)
+# target_include_directories(Psidon PRIVATE lib/bgfx/include)
+# target_link_directories(Psidon PRIVATE lib/bgfx/.build/linux64_gcc/bin)
 
-target_link_libraries(Psidon glfw)
+target_link_libraries(Psidon glfw) # bgfx-shared-libDebug GL X11 pthread rt
