--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,12 @@
 [submodule "Psidon/lib/glfw"]
 	path = Psidon/lib/glfw
 	url = https://github.com/glfw/glfw
+[submodule "Psidon/lib/bx"]
+	path = Psidon/lib/bx
+	url = https://github.com/bkaradzic/bx.git
+[submodule "Psidon/lib/bimg"]
+	path = Psidon/lib/bimg
+	url = https://github.com/bkaradzic/bimg.git
+[submodule "Psidon/lib/bgfx"]
+	path = Psidon/lib/bgfx
+	url = https://github.com/bkaradzic/bgfx.git
